scripts/nullaway/wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8.txt
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/gui/controller/Controller.java:70: error: [NullAway] dereferenced expression evaluator is @Nullable
            double evaluation = evaluator.calculateProfitLoss();
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/gui/controller/Controller.java:86: error: [NullAway] dereferenced expression lookbackPeriod is @Nullable
        if (lookbackPeriod.isEmpty()) {
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/evaluator/TradeStrategyEvaluator.java:55: error: [NullAway] dereferenced expression ask is @Nullable
            profit += ask.evaluateTrade();
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/order/AlgorithmicTrade.java:60: error: [NullAway] dereferenced expression this.bidOrder.getDateTime() is @Nullable
        return (int) (this.bidOrder.getDateTime().getTime() + this.bidOrder.getPrice() + this.askOrder.getDateTime().getTime() + this.askOrder.getPrice());
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/order/AlgorithmicTrade.java:60: error: [NullAway] dereferenced expression this.askOrder.getDateTime() is @Nullable
        return (int) (this.bidOrder.getDateTime().getTime() + this.bidOrder.getPrice() + this.askOrder.getDateTime().getTime() + this.askOrder.getPrice());
                                                                                                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/gui/view/TradeGraphPlotter.java:51: error: [NullAway] dereferenced expression ask is @Nullable
            askData.add(new Millisecond(ask.getAskOrder().getDateTime()), ask.getAskOrder().getPrice());
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/gui/view/RunnerGUI.java:171: error: [NullAway] dereferenced expression controller.getEvaluator() is @Nullable
                TradeGraphPlotter plot = new TradeGraphPlotter("Algorithmic Trades", "Algorithmic Trade Plot", controller.getEvaluator().getTradePair());
                                                                                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/OrderbookImpl.java:27: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.tradeList = tradeList;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/OrderBuilderImpl.java:82: error: [NullAway] dereferenced expression order.getPrice() is @Nullable
        if (!order.getPrice().isEmpty()) {
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/OrderBuilderImpl.java:87: error: [NullAway] dereferenced expression order.getVolume() is @Nullable
        if (!order.getVolume().isEmpty()) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/generator/TradeSignalGenerator.java:38: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.tradeList = tradeList;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/generator/TradeSignalGenerator.java:293: error: [NullAway] dereferenced expression ask.getDateTime() is @Nullable
            if (ask.getDateTime().getTime() > dateTime.getTime()) {
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/generator/TradeSignalGenerator.java:293: error: [NullAway] dereferenced expression dateTime is @Nullable
            if (ask.getDateTime().getTime() > dateTime.getTime()) {
                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/generator/TradeSignalGenerator.java:314: error: [NullAway] dereferenced expression bid.getDateTime() is @Nullable
            if (bid.getDateTime().getTime() > dateTime.getTime()) {
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/generator/TradeSignalGenerator.java:314: error: [NullAway] dereferenced expression dateTime is @Nullable
            if (bid.getDateTime().getTime() > dateTime.getTime()) {
                                                      ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
15 errors
